Version 0.2.0 ()
	update, clean code
Version 0.1.9 (2018-03-09)
	added, integrated public articles
	update, clean code
Version 0.1.8 (2018-03-07)
	update, tinymce/tinymce (4.7.7 => 4.7.9)
	update, components/jquery (3.2.1 => 3.3.1)
Version 0.1.7 (2018-03-07)
	update, installer
	update, README.md
	update, code clean
Version 0.1.6 (2018-03-02)
	added, integrated public news
	added, integrated new settings
	bugfix, fixed many many other minor bugs
	update, translates
	update, installer
Version 0.1.5 (2018-02-27)
	update, bugfix an small cosmetic improvements
	remove, cms-config.php
Version 0.1.4 (2018-02-26)
	remove, classic theme
	update, improve admin navigation 
	added, Links-Settings and public links section
Version 0.1.3 (2018-02-23)
	bugfix, fixed many many other minor bugs
Version 0.1.2 (2018-02-22)
	added, brandnew installer
	added, settings for mainpage
	added, mainpage
	added, contact enqiery
	bugfix, fixed many many other minor bugs
	update, Updating tinymce/tinymce (4.7.6 => 4.7.7)
Version 0.1.1 (2018-02-15)
	update, tinymce editor (4.7.5 => 4.7.6)
Version 0.1.0 (2018-01-30)
	added, tagline in sites
	bugfix, fixed many many other minor bugs
Version 0.0.9 (2018-01-29)
	bugfix, fixed many many other minor bugs
	added, dynamic navbar in public part
Version 0.0.8 (2018-01-25)
	bugfix, badges works again
	bugfix, fixed many many other minor bugs
	added, integrate new glyphicons
	added, function to hide the navigation bar on the left
	update, update from bootstrap-3.3.7 to bootstrap-4.0.0
	update, rename theme name "bootstrap-3.3.7" to "default"
Version 0.0.7 (2018-01-24)
	update, tinymce editor (4.7.4 => 4.7.5)
Version 0.0.6 (2018-01-19)
	bugfix, delete in downloads works again
	bugfix, delete in links works again
	bugfix, delete in news works again
Version 0.0.5 (2018-01-19)
	added, sites can be created
	update, public section
Version 0.0.4 (2018-01-18)
	new, blog url can be set in general-settings
Version 0.0.3 (2018-01-18)