@@ -3,7 +3,7 @@
 session_start();
 
 if (!file_exists('cms-config.php')) {
-    header("Location: _installer_/index.php?uri=language");
+    header("Location: _installer_/index.php?uri=language&lang=en");
 }
 
 include __DIR__ . '/cms-config.php';
@@ -17,22 +17,23 @@ $id  = filter_input(INPUT_GET, 'id');
 
 $content = '';
 
-$template_path = 'templates/default/pub_template.tpl.php';
-
 load_session();
 
-/* Template einlesen  */
-
-$template = file_get_contents($template_path);
+$template = loadTemplate('pub_template');
 
 if (isset($route[$uri]) ) {
     $content .= $route[$uri]($id);
 }
 
-$template = str_replace('<@title@>',$_SESSION['title'],$template);
-$template = str_replace('<@navigation@>',load_public_navigation(),$template);
-$template = str_replace('<@content@>',$content,$template);
-$template = str_replace('$PHP_SELF',$_SERVER['PHP_SELF'],$template);
+$placeholderList = [
+    '##placeholder-language##'   => $_SESSION['language'],
+    '##placeholder-title##'      => $_SESSION['title'],
+    '##placeholder-navigation##' => load_public_navigation(),
+    '##placeholder-content##'    => $content,
+    '##placeholder-footer##'     => $_SESSION['footer']
+];
+
+$template = strtr($template, $placeholderList);
 
 echo stripslashes($template);
 
